src/argo/apps/open-money-tracker/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-money-tracker-tls
  namespace: open-money-tracker
  annotations:
    ingress.cilium.io/force-https: "disabled"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - money.lab.di3go-sona.dev
      secretName: lab-di3go-sona-dev-tls
  rules:
    - host: money.lab.di3go-sona.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-money-tracker
                port:
                  number: 80
